--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Introduction to CSS Lab</title>
     <link rel = "stylesheet" href = "./style.css">
     body {
-    
+      background :
   </head>
 
   <body>
