--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Introduction to CSS Lab</title>
     <link rel = "stylesheet" href = "./style.css">
     body {
-      background :
+      background :#00b3e6
+      }
   </head>
 
   <body>
